// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> General 1`] = `
<div>
  <div
    style="width: 310px;"
  >
    <div
      class="HvDropdown-root HvFormElement-root"
    >
      <div
        class="HvBaseDropdown-root HvDropdown-dropdown"
      >
        <div
          aria-expanded="true"
          aria-owns="hvbasedropdown3-children-container"
          class="HvBaseDropdown-anchor"
          role="combobox"
          tabindex="-1"
        >
          <div
            aria-controls="hvbasedropdown3-children-container"
            class="HvBaseDropdown-header HvDropdown-dropdownHeader HvBaseDropdown-headerOpen HvDropdown-dropdownHeaderOpen HvBaseDropdown-headerOpenDown"
            role="textbox"
            tabindex="0"
          >
            <div
              class="HvBaseDropdown-selection"
            >
              <div
                class="HvDropdown-placeholder HvTypography-root HvTypography-normalText HvTypography-noWrap"
              >
                <b>
                  1
                </b>
                 / 4
              </div>
            </div>
            <div
              class="HvBaseDropdown-arrow HvDropdown-arrow HvIconBase-root HvIconBase-xs"
              name="DropUpXS"
            >
              <svg
                focusable="false"
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M10.6 7.95l-.7.7L6 4.75l-3.9 3.9-.7-.7L6 3.35z"
                  fill="#414141"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> SingleSelection 1`] = `
<div>
  <div
    style="width: 310px;"
  >
    <div
      class="HvDropdown-root HvFormElement-root"
      id="dropdown7"
    >
      <div
        class="HvBaseDropdown-root HvDropdown-dropdown"
      >
        <div
          aria-expanded="true"
          aria-owns="dropdown7-dropdown-children-container"
          class="HvBaseDropdown-anchor"
          id="dropdown7-dropdown"
          role="combobox"
          tabindex="-1"
        >
          <div
            aria-controls="dropdown7-dropdown-children-container"
            class="HvBaseDropdown-header HvDropdown-dropdownHeader HvBaseDropdown-headerOpen HvDropdown-dropdownHeaderOpen HvBaseDropdown-headerOpenDown"
            id="dropdown7-dropdown-header"
            role="textbox"
            tabindex="0"
          >
            <div
              class="HvBaseDropdown-selection"
            >
              <div
                class="HvDropdown-placeholder HvTypography-root HvTypography-normalText HvTypography-noWrap"
              >
                Select...
              </div>
            </div>
            <div
              class="HvBaseDropdown-arrow HvDropdown-arrow HvIconBase-root HvIconBase-xs"
              name="DropUpXS"
            >
              <svg
                focusable="false"
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M10.6 7.95l-.7.7L6 4.75l-3.9 3.9-.7-.7L6 3.35z"
                  fill="#414141"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> SingleSelectionWithSearch 1`] = `
<div>
  <div
    style="width: 310px;"
  >
    <div
      class="HvDropdown-root HvFormElement-root"
      id="dropdown6"
    >
      <div
        class="HvBaseDropdown-root HvDropdown-dropdown"
      >
        <div
          aria-expanded="true"
          aria-owns="dropdown6-dropdown-children-container"
          class="HvBaseDropdown-anchor"
          id="dropdown6-dropdown"
          role="combobox"
          tabindex="-1"
        >
          <div
            aria-controls="dropdown6-dropdown-children-container"
            class="HvBaseDropdown-header HvDropdown-dropdownHeader HvBaseDropdown-headerOpen HvDropdown-dropdownHeaderOpen HvBaseDropdown-headerOpenDown"
            id="dropdown6-dropdown-header"
            role="textbox"
            tabindex="0"
          >
            <div
              class="HvBaseDropdown-selection"
            >
              <div
                class="HvDropdown-placeholder HvTypography-root HvTypography-normalText HvTypography-noWrap"
              >
                value 2
              </div>
            </div>
            <div
              class="HvBaseDropdown-arrow HvDropdown-arrow HvIconBase-root HvIconBase-xs"
              name="DropUpXS"
            >
              <svg
                focusable="false"
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M10.6 7.95l-.7.7L6 4.75l-3.9 3.9-.7-.7L6 3.35z"
                  fill="#414141"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
